fixed maven plugin versions for JDK 16