@@ -21,6 +21,8 @@
 
 	<!-- common environmental and version properties-->
 	<properties>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 
 		<!-- USE UTF-8 in whole project -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -51,74 +53,27 @@
 		<pluginManagement>
 
 			<plugins>
-
-				<!-- mvn clean - cleans output folder (target) -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-clean-plugin</artifactId>
-					<version>2.5</version>
-				</plugin>
-
-				<!-- mvn compile - compile as Java 1.7 app in UTF-8 -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.1</version>
-					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
-						<verbose>false</verbose>
-						<encoding>UTF-8</encoding>
-					</configuration>
-				</plugin>
-
-				<!-- mvn install - build artifact and install it in local repository (.m2 folder) -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-install-plugin</artifactId>
-					<version>2.4</version>
-				</plugin>
-
-
-				<!-- mvn javadoc - creates javadoc from source (we do append spring javadoc if found) -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.9</version>
-					<configuration>
-						<detectLinks/>
-						<links>
-							<link>http://static.springsource.org/spring/docs/3.0.x/javadoc-api/</link>
-						</links>
-					</configuration>
-				</plugin>
-
-				<!-- mvn source:jar - packages sources -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-source-plugin</artifactId>
-					<version>2.2.1</version>
-				</plugin>
-
-				<!-- mvn jar:jar - creates final jar -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>2.4</version>
-				</plugin>
-
-				<!-- mvn jar:jar - creates final war -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
-					<version>2.4</version>
+					<version>3.3.1</version>
 				</plugin>
 
-				<!-- mvn shade - creates shaded jar (1 jar containing e.g. core + spring) -->
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-shade-plugin</artifactId>
-					<version>2.1</version>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>gwt-maven-plugin</artifactId>
+					<version>${gwtPluginVersion}</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>compile</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<sourceLevel>1.11</sourceLevel>
+						<extraJvmArgs>--illegal-access=permit</extraJvmArgs>
+					</configuration>
 				</plugin>
 
 				<!-- plugin used to apply jUnit tests settings in maven and to generate report (target/surefire-reports)-->
@@ -133,21 +88,6 @@
 						<skip>false</skip>
 					</configuration>
 				</plugin>
-
-				<!-- Copy dependencies plug-in -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-dependency-plugin</artifactId>
-					<version>2.8</version>
-				</plugin>
-
-				<!-- Executing plug-in: mvn exec:java -->
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>exec-maven-plugin</artifactId>
-					<version>1.2.1</version>
-				</plugin>
-
 			</plugins>
 
 		</pluginManagement>
